Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Don't match product and category lines when product is empty

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Add category as plan matching criteria

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Add Python3 support

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Rename default_principal property into principal

Version 3.6.0 - 2015-04-20
* Initial release